Upgrade to scala 2.13. Upgrade gradle, Java, and version to 1.6-SNAP.